# bfipp

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO.md  build.sh
docs/contributers/: adding_frontend.md
include/: build.sh
src/: backend.cpp  backend.hpp  config.hpp  error.cpp  error.hpp  escape.hpp  frontend.cpp  frontend.hpp  graphics.hpp  log.hpp  main.cpp  output.hpp  utils.cpp  utils.hpp
